GNOME Bugzilla – Bug 710698
Wrong enum constant used
Last modified: 2013-10-25 04:14:27 UTC
In gdaemonfileoutputstream.c, the constant SEEK_STATE_HANDLE_INPUT is used in iterate_query_state_machine().
Created attachment 257891 [details] [review] client: Fix usage of incorrect enum constant
Review of attachment 257891 [details] [review]: It looks good.
Pushed to master as e1fb451.