client: Fix usage of incorrect enum constant

https://bugzilla.gnome.org/show_bug.cgi?id=710698